Fix Merge Issues Adapt Programming Exercise getAll function to work with modified modal. In this version of the modal, the number of pages are limited to 10 so that it stays within the container view

--- a/src/main/webapp/app/exam/manage/exercise-groups/exercise-groups.component.html
+++ b/src/main/webapp/app/exam/manage/exercise-groups/exercise-groups.component.html
@@ -26,7 +26,7 @@
             <div class="d-flex flex-column justify-content-center">
                 <div class="btn-group flex-btn-group-container">
                     <div class="btn-group-vertical mr-1 mb-1" *jhiHasAnyAuthority="['ROLE_ADMIN', 'ROLE_INSTRUCTOR']">
-                        <button class="btn btn-info btn-sm mr-1 mb-1" (click)="openImportModal(exerciseGroup.id)">
+                        <button class="btn btn-info btn-sm mr-1 mb-1" (click)="openImportModal(exerciseGroup, exerciseType.TEXT)">
                             <fa-icon [icon]="'plus'"></fa-icon>
                             <span class="hidden-sm-down" jhiTranslate="artemisApp.textExercise.home.importLabel"></span>
                         </button>
