move logic from service to component

--- a/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.html
+++ b/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.html
@@ -41,7 +41,7 @@
         <div class="row justify-content-end align-items-center flex-nowrap pr-2">
             <div class="col-auto">
                 <button class="btn btn-sm btn-primary px-3" (click)="submitExam()">
-                    {{ 'artemisApp.examParticipation.finishExam' | translate }}
+                    {{ 'artemisApp.examParticipation.submit' | translate }}
                 </button>
             </div>
             <div class="col-auto h5 m-0 text-overflow px-3 py-2 remaining-time" [class.critical]="criticalTime">
