--- a/src/main/webapp/app/exercises/modeling/manage/modeling-exercise-import.component.html
+++ b/src/main/webapp/app/exercises/modeling/manage/modeling-exercise-import.component.html
@@ -1,6 +1,6 @@
 <form>
     <div class="modal-header">
-        <h4 class="modal-title" jhiTranslate="artemisApp.textExercise.home.importLabel">Import Modeling Exercise</h4>
+        <h4 class="modal-title" jhiTranslate="artemisApp.modelingExercise.home.importLabel">Import Modeling Exercise</h4>
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true" (click)="clear()">&times;</button>
     </div>
     <div class="modal-body">
