bind submission to components instead of participation

--- a/src/main/webapp/app/exam/participate/exercises/text/text-exam-submission.component.html
+++ b/src/main/webapp/app/exam/participate/exercises/text/text-exam-submission.component.html
@@ -17,8 +17,8 @@
                     #textEditor
                     class="text-editor-textarea"
                     [(ngModel)]="answer"
-                    [readonly]="!submission"
-                    [disabled]="!submission"
+                    [readonly]="!studentSubmission"
+                    [disabled]="!studentSubmission"
                     (keydown.tab)="onTextEditorTab(textEditor, $event)"
                     (input)="onTextEditorInput($event)"
                 ></textarea>
