--- a/src/main/webapp/app/exam/participate/exercises/modeling/modeling-exam-submission.component.html
+++ b/src/main/webapp/app/exam/participate/exercises/modeling/modeling-exam-submission.component.html
@@ -4,7 +4,7 @@
     <div left-body class="submission-container d-flex flex-column pl-2 mt-3 w-100">
         <jhi-fullscreen>
             <div class="row flex-grow-1">
-                <div *ngIf="submission && isActive" class="col-12 editor-large">
+                <div *ngIf="studentSubmission && isActive" class="col-12 editor-large">
                     <jhi-modeling-editor [umlModel]="umlModel" [diagramType]="exercise.diagramType"></jhi-modeling-editor>
                 </div>
             </div>
