add translation and save student exam to localstorage

--- a/src/main/webapp/app/exam/participate/exam-participation.component.html
+++ b/src/main/webapp/app/exam/participate/exam-participation.component.html
@@ -47,5 +47,6 @@
         </div>
     </ng-container>
 </ng-container>
-<!--TODO add translation-->
-<ng-template #noStudentExam>No student exam object found.</ng-template>
+<ng-template #noStudentExam>
+    <p jhiTranslate="artemisApp.examParticipation.noExam"></p>
+</ng-template>
