--- a/src/main/webapp/app/exam/participate/exam-cover/exam-participation-cover.component.html
+++ b/src/main/webapp/app/exam/participate/exam-cover/exam-participation-cover.component.html
@@ -13,7 +13,7 @@
         </button>
     </div>
     <div class="exam-waiting-for-start-overlay alert alert-info" *ngIf="waitingForExamStart">
-        <span jhiTranslate="artemisApp.examParticipation.waitForStart"></span>
+        <span>{{ 'artemisApp.examParticipation.waitForStart' | translate: { title: title } }}</span>
         <div *ngIf="exam.startDate">
             <hr />
             <span jhiTranslate="artemisApp.examParticipation.timeUntilPlannedStart"></span>
