--- a/src/main/webapp/app/exercises/programming/manage/update/programming-exercise-update.component.html
+++ b/src/main/webapp/app/exercises/programming/manage/update/programming-exercise-update.component.html
@@ -97,10 +97,11 @@
                         <option value="JAVA">Java</option>
                         <option value="PYTHON">Python</option>
                         <option value="C">C</option>
+                        <option value="HASKELL">Haskell</option>
                     </select>
                 </div>
 
-                <div class="form-group-narrow" *ngIf="programmingExercise.programmingLanguage === JAVA">
+                <div class="form-group-narrow" *ngIf="programmingExercise.programmingLanguage === ProgrammingLanguage.JAVA">
                     <label class="label-narrow" jhiTranslate="artemisApp.programmingExercise.packageName" for="field_packageName">Package Name</label>
                     <input
                         required
