--- a/src/main/webapp/app/exercises/shared/exercise-row-buttons/exercise-row-buttons.component.html
+++ b/src/main/webapp/app/exercises/shared/exercise-row-buttons/exercise-row-buttons.component.html
@@ -48,6 +48,24 @@
         <fa-icon [icon]="'eye'"></fa-icon>
         <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
     </button>
+    <button
+        *ngIf="examMode && exercise.type === exerciseType.QUIZ"
+        type="submit"
+        [routerLink]="['/course-management', courseId, 'quiz-exercises', exercise.id, 'preview']"
+        class="btn btn-success btn-sm mr-1"
+    >
+        <fa-icon [icon]="'eye'"></fa-icon>
+        <span class="d-none d-md-inline" jhiTranslate="artemisApp.quizExercise.preview">Preview</span>
+    </button>
+    <button
+        *ngIf="examMode && exercise.type === exerciseType.QUIZ"
+        type="submit"
+        [routerLink]="['/course-management', courseId, 'quiz-exercises', exercise.id, 'solution']"
+        class="btn btn-success btn-sm mr-1"
+    >
+        <fa-icon [icon]="'eye'"></fa-icon>
+        <span class="d-none d-md-inline" jhiTranslate="artemisApp.quizExercise.solution">Solution</span>
+    </button>
     <button *ngIf="examMode || exercise.isAtLeastInstructor" type="submit" [routerLink]="createRouterLink('edit')" class="btn btn-primary btn-sm mr-1">
         <fa-icon [icon]="'pencil-alt'"></fa-icon>
         <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
