--- a/src/main/webapp/app/exam/participate/exercises/programming/programming-exam-submission.component.html
+++ b/src/main/webapp/app/exam/participate/exercises/programming/programming-exam-submission.component.html
@@ -1,5 +1,8 @@
 <!-- nGif codeeditor start-->
-<jhi-exam-code-editor-student [exercise]="exercise" [participation]="studentParticipation"> </jhi-exam-code-editor-student>
+<jhi-exam-code-editor-student
+    [exercise]="exercise"
+    [participation]="studentParticipation"
+></jhi-exam-code-editor-student>
 <!-- nGif codeeditor end -->
 <!-- nGif codeeditorwith clone button start -->
 <!-- nGif codeeditorwith clone button end-->
