--- a/src/main/webapp/app/exam/participate/summary/exam-participation-summary.component.html
+++ b/src/main/webapp/app/exam/participate/summary/exam-participation-summary.component.html
@@ -15,6 +15,7 @@
     <div class="question card" *ngIf="submission.submissionExerciseType == 'text'">
         <div class="question-options card-header question-card-header">
             <h5>
+                &nbsp;<fa-icon [icon]="'font'"></fa-icon>&nbsp;
                 <span jhiTranslate="artemisApp.exam.exercise" [translateValues]="{ nr: i + 1 }">Exercise {{ i + 1 }}</span>
             </h5>
             <button
@@ -35,6 +36,7 @@
     <div class="question card" *ngIf="submission.submissionExerciseType == 'modeling'">
         <div class="question-options card-header question-card-header">
             <h5>
+                &nbsp;<fa-icon [icon]="'project-diagram'"></fa-icon>&nbsp;
                 <span jhiTranslate="artemisApp.exam.exercise" [translateValues]="{ nr: i + 1 }">(modeling) TODO add title/ problem statement</span>
             </h5>
             <button
@@ -57,6 +59,7 @@
     <div class="question card" *ngIf="submission.submissionExerciseType == 'quiz'">
         <div class="question-options card-header question-card-header">
             <h5>
+                &nbsp;<fa-icon [icon]="'check-double'"></fa-icon>&nbsp;
                 <span jhiTranslate="artemisApp.exam.exercise" [translateValues]="{ nr: i + 1 }">Exercise {{ i + 1 }}</span>
             </h5>
             <button
@@ -119,6 +122,7 @@
     <div class="question card" *ngIf="submission.submissionExerciseType == 'programming'">
         <div class="question-options card-header question-card-header">
             <h5>
+                &nbsp;<fa-icon [icon]="'keyboard'"></fa-icon>&nbsp;
                 <span jhiTranslate="artemisApp.exam.exercise" [translateValues]="{ nr: i + 1 }">Exercise {{ i + 1 }}</span>
             </h5>
             <button
@@ -153,6 +157,7 @@
     <div class="question card" *ngIf="submission.submissionExerciseType == 'file-upload'">
         <div class="question-options card-header question-card-header">
             <h5>
+                &nbsp;<fa-icon [icon]="'file-upload'"></fa-icon>&nbsp;
                 <span jhiTranslate="artemisApp.exam.exercise" [translateValues]="{ nr: i + 1 }">Exercise {{ i + 1 }}</span>
             </h5>
             <button
