--- a/src/main/webapp/app/exam/manage/exercise-groups/exercise-groups.component.html
+++ b/src/main/webapp/app/exam/manage/exercise-groups/exercise-groups.component.html
@@ -15,7 +15,7 @@
 <div class="mt-3 text-right" style="font-size: 0.85rem;">Number of exercise groups: {{ exerciseGroups ? exerciseGroups.length : 0 }}</div>
 <div *ngFor="let exerciseGroup of exerciseGroups; let i = index" class="mt-3" style="border: 1px solid #cccccc;">
     <div class="d-flex p-3" style="background-color: #e1e1e1;">
-        <div class="mr-3">
+        <div class="mr-3 d-flex justify-content-center">
             <button (click)="moveUp(i)" [disabled]="i == 0" class="border-0 p-0 mr-1 bg-transparent">
                 <fa-icon [icon]="'angle-up'" style="font-size: 1.3rem;"></fa-icon>
             </button>
@@ -74,7 +74,7 @@
                                 deleteConfirmationText="artemisApp.examManagement.exerciseGroup.delete.typeNameToConfirm"
                                 (delete)="deleteExerciseGroup(exerciseGroup.id)"
                                 [dialogError]="dialogError$"
-                                class="mb-1"
+                                class="mb-0"
                             >
                                 <fa-icon [icon]="'times'"></fa-icon>
                             </button>
