--- a/src/main/webapp/app/exam/participate/exercises/programming/programming-exam-submission.component.html
+++ b/src/main/webapp/app/exam/participate/exercises/programming/programming-exam-submission.component.html
@@ -1,7 +1,17 @@
 <!-- nGif codeeditor start-->
-<jhi-exam-code-editor-student [exercise]="exercise" [participation]="studentParticipation"> </jhi-exam-code-editor-student>
 <!-- nGif codeeditor end -->
 <!-- nGif codeeditorwith clone button start -->
 <!-- nGif codeeditorwith clone button end-->
 <!-- nGif Offline IDE clone button start -->
+<div *ngIf="isOfflineMode()">
+    <jhi-exercise-details-student-actions jhiOrionFilter [showInOrionWindow]="false" [exercise]="exercise" [courseId]="2" [showResult]="false">
+    </jhi-exercise-details-student-actions>
+    <jhi-submission-result-status [exercise]="exercise" [studentParticipation]="studentParticipation" [showGradedBadge]="true"></jhi-submission-result-status>
+    <jhi-programming-exercise-instructions
+        *ngIf="exercise"
+        [exercise]="exercise"
+        [participation]="studentParticipation"
+        [personalParticipation]="true"
+    ></jhi-programming-exercise-instructions>
+</div>
 <!-- nGif Offline IDE clone button end-->
