--- a/src/main/webapp/app/exercises/shared/exercise/exercise-details/exercise-details.component.html
+++ b/src/main/webapp/app/exercises/shared/exercise/exercise-details/exercise-details.component.html
@@ -1,16 +1,15 @@
-<dt *ngIf="superExerciseDetails.course"><span jhiTranslate="artemisApp.exercise.course">Course</span></dt>
+<dt *ngIf="superExerciseDetails.course || superExerciseDetails.exerciseGroup"><span jhiTranslate="artemisApp.exercise.course">Course</span></dt>
 <dd *ngIf="superExerciseDetails.course">
     <div>
         <a [routerLink]="['/course-management', superExerciseDetails.course?.id, 'view']">{{ superExerciseDetails.course?.title }}</a>
     </div>
 </dd>
-<dt *ngIf="superExerciseDetails.exerciseGroup"><span jhiTranslate="artemisApp.exercise.course">Course</span></dt>
 <dd *ngIf="superExerciseDetails.exerciseGroup">
     <div>
         <a [routerLink]="['/course-management', superExerciseDetails.exerciseGroup?.exam?.course?.id, 'view']">{{ superExerciseDetails.exerciseGroup?.exam?.course?.title }}</a>
     </div>
 </dd>
-<dt *ngIf="superExerciseDetails.exerciseGroup"><span>Exam</span></dt>
+<dt *ngIf="superExerciseDetails.exerciseGroup"><span jhiTranslate="artemisApp.exercise.exam">Exam</span></dt>
 <dd *ngIf="superExerciseDetails.exerciseGroup">
     <div>
         <!-- TODO Enable when implemented
