examTitle instead of courseTitle in student exam pages

--- a/src/main/webapp/app/exam/manage/student-exams/student-exams.component.html
+++ b/src/main/webapp/app/exam/manage/student-exams/student-exams.component.html
@@ -66,7 +66,7 @@
                         </span>
                     </ng-template>
                     <ng-template ngx-datatable-cell-template let-value="value">
-                        <a routerLink="/course-management/{{ courseId }}/exams/{{ examId }}/view">{{ course?.title }}</a>
+                        <a routerLink="/course-management/{{ courseId }}/exams/{{ examId }}/view">{{ exam.title }}</a>
                     </ng-template>
                 </ngx-datatable-column>
 
@@ -108,7 +108,7 @@
                         </span>
                     </ng-template>
                     <ng-template ngx-datatable-cell-template let-value="value">
-                        {{ value?.startDate | artemisDate: 'long':true }}
+                        <!-- {{ value?.startDate | artemisDate: 'long':true }} -->
                     </ng-template>
                 </ngx-datatable-column>
 
